--- a/styles/myStyles.css
+++ b/styles/myStyles.css
@@ -2,7 +2,6 @@ body, html{
 	
 	padding: 0px;
 	margin: 0px;
-	
 }
 
 
@@ -90,14 +89,14 @@ body, html{
 #name{
 	font-family: 'Fredoka One', cursive;
 	font-size: 55px;
-	position: relative;
+	position: absolute;
 	left:370px;
 }
 #introText{
 	font-family: 'Fredoka One', cursive;
 	font-size: 25px;
 	position: absolute;
-	top:70px;
+	margin-top: 70px;
 	left:400px;
 
 }
@@ -121,16 +120,16 @@ body, html{
 	font-family: 'Fredoka One', cursive;
 	font-size: 35px;
 	position: absolute;
-	left: 900px;
-	top:100px;
+	left: 800px;
+	margin-top:-200px;
 	
 }
 #workHistText{
 	font-family: 'Fredoka One', cursive;
 	font-size: 15px;
 	position: absolute;
-	top:200px;
-	left: 900px;
+	margin-top:-150px;
+	left: 800px;
 	
 }
 #contact{
@@ -138,7 +137,7 @@ body, html{
 	font-size: 45px;
 	position: absolute;
 	top:250px;
-	left: px;
+	margin-right: 3300px;
 	color: white;
 }
 #email{
@@ -146,7 +145,7 @@ body, html{
 	font-size: 45px;
 	position: absolute;
 	top:300px;
-	left: px;
+	right: 3000px;
 	color: white;
 
 }
